- #6916 Main Window receives screen name change
- #6910 Don't use the word “Version” for release names because it can lead to errors during update checking.
- #6918 Removing positional union initialisation
- #6931 Update build pipeline to support macOS 10.13
- #6937 Modern C++ compiler for centOS7
- #6938 Remove auto config message from the main window
- #6941 Add Raspberry Pi Builds

v1.13.0-stable
===========
Bug fixes:
- #6858 Application is blurry and unfocused on macOS
- #6872 Check for dns_sd.h only when building GUI
- #6874 The logo on Windows taskbar is incorrect.
- #6879 Update macOS installer drive icons
- #6878 Update googletest library to latest version
- #6882 Build macOS using qt 5.15.2 and avoid using brew for build
- #6884 Fix logo for Linux and dark logo for macOS
- #6886 Update Welcome screen

Enhancements:
- #6867 Create only 1 artefact for macOS
- #6885 Make build for every merge to master

v1.13.0-rc2
===========
Bug fixes:
- #6831 Incorporating Sonar's major
- #6837 Memory leaks on macOS system
- #6838 Enterprise asks for serial key on Linux system
- #6849 Auto-hide resets itself
- #6846 TLS certificate is not created by default for Synergy Enterprise.
- #6859 Systray Icon on Ubuntu Auto Start
- #6863 Adding MacOS CI Build Steps for Homebrew Cleanup

Enhancements:
- #6836 Enabling Github Code Scanning
- #6841 Windows installer has been updated.
- #6844 macOS installer has been updated.
- #6860 About Synergy logo refreshed
- #6865 Updated visual assets

v1.12.x-snapshot
===========
Bug fixes:
- #6753 Fixed a number of vulnerabilities detected by static analysis
- #6567 Fixed Synergy spawning hundreds of zombie processes
- #6755 Fixed Vulnerability in vreadf function detected by Static analysis
- #6758 Account name with space on windows causes synergy to error when starting
- #6760 Synergy loses license when creating a System scope config
- #6342 Updated copyright year in version to use build date
- #6771 Added Ubuntu 16 to CI/CD